src/test/resources/errors/todo/orphaned_component.jd
justification orphaned_component {
    evidence Su1 is "Evidence 1"
    // Su1 has no relations
}

